--- a/StandardScaler.ipynb
+++ b/StandardScaler.ipynb
@@ -568,7 +568,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## The linear regression model scores for both fitting and testing data did not change after being standardized. The ridge regression model did benefit greatly after standardization the StandardScaler. The ridge regression model had a score of 0.73 for fitting data and 0.65 for testing data before standardization and normalization. After applying StandardScaler, the score for fitting data increased to 0.93 and for testing data increased to 0.91."
+        "## The linear regression model scores for both fitting and testing data did not change after being standardized. The ridge regression model did benefit greatly after standardization with StandardScaler. The ridge regression model had a score of 0.73 for fitting data and 0.65 for testing data before standardization and normalization. After applying StandardScaler, the score for fitting data increased to 0.93 and for testing data increased to 0.91."
       ],
       "metadata": {
         "id": "W-65fnUSlKvi"
