--- a/Missing data.ipynb
+++ b/Missing data.ipynb
@@ -123,7 +123,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##After removing missing data, the there are 29 less rows in the fit data and 13 less rows in the test data."
+        "##After removing missing data, there are 29 less rows in the fit data and 13 less rows in the test data."
       ],
       "metadata": {
         "id": "bKCj2b3fatVU"
